--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
 * {
     margin: 0;
+    padding: 0;
+}
+
+.wapper {
+    font-family: sans-serif;
+}
+
+.nav {
+    display: flex;
+    align-items: center;
+    gap: 25px;
 }
